--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -248,7 +248,6 @@ allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
 allow 181.41.143.240;
-allow 18.210.161.127;
 allow 184.105.48.40;
 allow 184.75.221.107;
 allow 185.100.85.132;
@@ -309,7 +308,6 @@ allow 185.181.61.142;
 allow 185.183.157.214;
 allow 185.183.159.40;
 allow 185.191.204.254;
-allow 185.193.125.105;
 allow 185.193.158.134;
 allow 185.193.52.180;
 allow 185.195.71.10;
@@ -534,6 +532,8 @@ allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.38.175.133;
 allow 185.39.207.83;
+allow 185.40.4.132;
+allow 185.40.4.149;
 allow 185.40.4.150;
 allow 185.40.4.38;
 allow 185.42.170.203;
@@ -1530,7 +1530,6 @@ allow 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
-allow 2a0a:3840:1337:125:0:b9c1:7d69:1337;
 allow 2a0a:3840:8078:27:0:504e:1b42:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
@@ -1703,6 +1702,8 @@ allow 2a0b:f4c2::9;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:c2c0:1:4::2;
+allow 2a0e:4005:1002:ffff:185:40:4:132;
+allow 2a0e:4005:1002:ffff:185:40:4:149;
 allow 2a0e:4005:1002:ffff:185:40:4:38;
 allow 2a0e:97c0:3ea:372::1;
 allow 2a0e:97c0:3ea:bc::1;
@@ -1755,11 +1756,11 @@ allow 2a12:a800:2:1:45:138:16:178;
 allow 2a12:bec4:11d3:de9f::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
-allow 31.13.195.57;
 allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.134;
+allow 3.227.77.112;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1887,7 +1888,6 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1981,6 +1981,7 @@ allow 82.118.242.36;
 allow 82.153.138.119;
 allow 82.221.128.191;
 allow 82.221.131.5;
+allow 82.221.139.190;
 allow 82.85.247.254;
 allow 83.217.9.73;
 allow 83.96.213.63;
