--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -568,7 +568,6 @@ deny 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
 deny 2a09:6301:0:2e1:b492:c29e:f532:42c6;
-deny 2a0a:3840:1337:125:0:b9c1:7d69:1337;
 deny 2a0a:3840:8078:27:0:504e:1b42:1337;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
@@ -741,6 +740,8 @@ deny 2a0b:f4c2::9;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:c2c0:1:4::2;
+deny 2a0e:4005:1002:ffff:185:40:4:132;
+deny 2a0e:4005:1002:ffff:185:40:4:149;
 deny 2a0e:4005:1002:ffff:185:40:4:38;
 deny 2a0e:97c0:3ea:372::1;
 deny 2a0e:97c0:3ea:bc::1;
