--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -184,6 +184,7 @@ allow 162.247.74.7;
 allow 162.247.74.74;
 allow 162.251.5.152;
 allow 163.172.45.102;
+allow 163.5.143.76;
 allow 164.132.172.209;
 allow 165.73.242.163;
 allow 166.70.207.2;
@@ -245,7 +246,6 @@ allow 180.150.226.99;
 allow 181.41.143.180;
 allow 181.41.143.240;
 allow 181.41.143.241;
-allow 18.233.175.175;
 allow 184.105.48.40;
 allow 184.75.221.107;
 allow 185.100.85.132;
@@ -605,6 +605,7 @@ allow 193.142.147.69;
 allow 193.168.141.173;
 allow 193.168.143.161;
 allow 193.182.96.246;
+allow 193.188.21.212;
 allow 193.189.100.194;
 allow 193.189.100.195;
 allow 193.189.100.196;
@@ -715,7 +716,6 @@ allow 2001:620:20d0::20;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
 allow 2001:638:301:f732::150;
-allow 2001:678:6d4:5130::2;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
@@ -781,6 +781,7 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
 allow 2001:67c:6ec:203:218:33ff:fe44:5528;
 allow 2001:780:107:b::85;
+allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4002:3d6a::b;
 allow 2001:b030:2422::7234;
@@ -1372,7 +1373,6 @@ allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
-allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:25b0:aaaa:5258::;
 allow 2a02:2970:1001::4b;
@@ -1706,6 +1706,15 @@ allow 2a10:1fc0:d::7384:5a63;
 allow 2a10:1fc0:d::9c5b:b08e;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
+allow 2a12:5940:13e2::2;
+allow 2a12:5940:144f::2;
+allow 2a12:5940:52c2::2;
+allow 2a12:5940:9101::2;
+allow 2a12:5940:b4db::2;
+allow 2a12:5940:b4dd::2;
+allow 2a12:5940:c051::2;
+allow 2a12:5940:c826::2;
+allow 2a12:5940:f0a8::2;
 allow 2a12:a800:1:1:194:26:192:161;
 allow 2a12:a800:2:1:185:241:208:81;
 allow 2a12:a800:2:1:45:138:16:178;
@@ -1715,6 +1724,7 @@ allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.134;
+allow 34.225.112.43;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1778,6 +1788,7 @@ allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.150.108.229;
 allow 45.151.122.34;
+allow 45.15.157.177;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1832,6 +1843,7 @@ allow 51.81.254.14;
 allow 51.81.254.15;
 allow 51.81.254.3;
 allow 5.181.80.107;
+allow 5.182.86.212;
 allow 51.83.40.211;
 allow 51.89.145.143;
 allow 51.89.145.146;
@@ -1868,7 +1880,9 @@ allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
+allow 5.42.80.232;
 allow 5.42.80.233;
+allow 5.42.80.234;
 allow 5.42.80.235;
 allow 54.36.101.21;
 allow 54.36.108.162;
@@ -1917,6 +1931,7 @@ allow 79.137.198.213;
 allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
+allow 80.67.172.162;
 allow 80.78.27.66;
 allow 80.82.78.14;
 allow 80.94.92.106;
@@ -1942,7 +1957,6 @@ allow 85.204.116.92;
 allow 85.204.116.93;
 allow 85.239.41.130;
 allow 85.93.218.204;
-allow 86.104.194.13;
 allow 86.104.75.99;
 allow 87.118.110.27;
 allow 87.118.116.103;
@@ -1962,6 +1976,7 @@ allow 89.147.110.214;
 allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.147.111.87;
+allow 89.185.85.140;
 allow 89.187.143.31;
 allow 89.213.174.248;
 allow 89.234.157.254;
@@ -1972,13 +1987,13 @@ allow 89.58.26.216;
 allow 89.58.41.156;
 allow 89.58.41.251;
 allow 89.58.63.200;
+allow 91.103.253.141;
 allow 91.132.144.59;
 allow 91.193.18.63;
 allow 91.202.5.104;
 allow 91.203.144.194;
 allow 91.203.145.116;
 allow 91.206.26.26;
-allow 91.208.206.47;
 allow 91.208.75.153;
 allow 91.208.75.156;
 allow 91.208.75.178;
@@ -2025,6 +2040,8 @@ allow 94.177.106.46;
 allow 94.177.106.54;
 allow 94.177.106.55;
 allow 94.177.106.59;
+allow 94.228.163.25;
+allow 94.228.169.70;
 allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.32.66.15;
