--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -32,7 +32,6 @@ allow 2001:620:20d0::20;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
 allow 2001:638:301:f732::150;
-allow 2001:678:6d4:5130::2;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
@@ -98,6 +97,7 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
 allow 2001:67c:6ec:203:218:33ff:fe44:5528;
 allow 2001:780:107:b::85;
+allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4002:3d6a::b;
 allow 2001:b030:2422::7234;
@@ -425,7 +425,6 @@ allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
-allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:25b0:aaaa:5258::;
 allow 2a02:2970:1001::4b;
@@ -759,6 +758,15 @@ allow 2a10:1fc0:d::7384:5a63;
 allow 2a10:1fc0:d::9c5b:b08e;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
+allow 2a12:5940:13e2::2;
+allow 2a12:5940:144f::2;
+allow 2a12:5940:52c2::2;
+allow 2a12:5940:9101::2;
+allow 2a12:5940:b4db::2;
+allow 2a12:5940:b4dd::2;
+allow 2a12:5940:c051::2;
+allow 2a12:5940:c826::2;
+allow 2a12:5940:f0a8::2;
 allow 2a12:a800:1:1:194:26:192:161;
 allow 2a12:a800:2:1:185:241:208:81;
 allow 2a12:a800:2:1:45:138:16:178;
