--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -184,6 +184,7 @@ set_real_ip_from 162.247.74.7;
 set_real_ip_from 162.247.74.74;
 set_real_ip_from 162.251.5.152;
 set_real_ip_from 163.172.45.102;
+set_real_ip_from 163.5.143.76;
 set_real_ip_from 164.132.172.209;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
@@ -245,7 +246,6 @@ set_real_ip_from 180.150.226.99;
 set_real_ip_from 181.41.143.180;
 set_real_ip_from 181.41.143.240;
 set_real_ip_from 181.41.143.241;
-set_real_ip_from 18.233.175.175;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 184.75.221.107;
 set_real_ip_from 185.100.85.132;
@@ -605,6 +605,7 @@ set_real_ip_from 193.142.147.69;
 set_real_ip_from 193.168.141.173;
 set_real_ip_from 193.168.143.161;
 set_real_ip_from 193.182.96.246;
+set_real_ip_from 193.188.21.212;
 set_real_ip_from 193.189.100.194;
 set_real_ip_from 193.189.100.195;
 set_real_ip_from 193.189.100.196;
@@ -715,7 +716,6 @@ set_real_ip_from 2001:620:20d0::20;
 set_real_ip_from 2001:620:20d0::23;
 set_real_ip_from 2001:620:20d0::24;
 set_real_ip_from 2001:638:301:f732::150;
-set_real_ip_from 2001:678:6d4:5130::2;
 set_real_ip_from 2001:67c:2044:1905::26;
 set_real_ip_from 2001:67c:2608::1;
 set_real_ip_from 2001:67c:289c::20;
@@ -781,6 +781,7 @@ set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5526;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5527;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5528;
 set_real_ip_from 2001:780:107:b::85;
+set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4002:3d6a::b;
 set_real_ip_from 2001:b030:2422::7234;
@@ -1372,7 +1373,6 @@ set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
-set_real_ip_from 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:25b0:aaaa:5258::;
 set_real_ip_from 2a02:2970:1001::4b;
@@ -1706,6 +1706,15 @@ set_real_ip_from 2a10:1fc0:d::7384:5a63;
 set_real_ip_from 2a10:1fc0:d::9c5b:b08e;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
+set_real_ip_from 2a12:5940:13e2::2;
+set_real_ip_from 2a12:5940:144f::2;
+set_real_ip_from 2a12:5940:52c2::2;
+set_real_ip_from 2a12:5940:9101::2;
+set_real_ip_from 2a12:5940:b4db::2;
+set_real_ip_from 2a12:5940:b4dd::2;
+set_real_ip_from 2a12:5940:c051::2;
+set_real_ip_from 2a12:5940:c826::2;
+set_real_ip_from 2a12:5940:f0a8::2;
 set_real_ip_from 2a12:a800:1:1:194:26:192:161;
 set_real_ip_from 2a12:a800:2:1:185:241:208:81;
 set_real_ip_from 2a12:a800:2:1:45:138:16:178;
@@ -1715,6 +1724,7 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 34.225.112.43;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.1.201.144;
@@ -1778,6 +1788,7 @@ set_real_ip_from 45.148.10.111;
 set_real_ip_from 45.148.10.169;
 set_real_ip_from 45.150.108.229;
 set_real_ip_from 45.151.122.34;
+set_real_ip_from 45.15.157.177;
 set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.61.186.203;
 set_real_ip_from 45.61.187.200;
@@ -1832,6 +1843,7 @@ set_real_ip_from 51.81.254.14;
 set_real_ip_from 51.81.254.15;
 set_real_ip_from 51.81.254.3;
 set_real_ip_from 5.181.80.107;
+set_real_ip_from 5.182.86.212;
 set_real_ip_from 51.83.40.211;
 set_real_ip_from 51.89.145.143;
 set_real_ip_from 51.89.145.146;
@@ -1868,7 +1880,9 @@ set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
+set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
+set_real_ip_from 5.42.80.234;
 set_real_ip_from 5.42.80.235;
 set_real_ip_from 54.36.101.21;
 set_real_ip_from 54.36.108.162;
@@ -1917,6 +1931,7 @@ set_real_ip_from 79.137.198.213;
 set_real_ip_from 80.210.78.252;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
+set_real_ip_from 80.67.172.162;
 set_real_ip_from 80.78.27.66;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 80.94.92.106;
@@ -1942,7 +1957,6 @@ set_real_ip_from 85.204.116.92;
 set_real_ip_from 85.204.116.93;
 set_real_ip_from 85.239.41.130;
 set_real_ip_from 85.93.218.204;
-set_real_ip_from 86.104.194.13;
 set_real_ip_from 86.104.75.99;
 set_real_ip_from 87.118.110.27;
 set_real_ip_from 87.118.116.103;
@@ -1962,6 +1976,7 @@ set_real_ip_from 89.147.110.214;
 set_real_ip_from 89.147.110.82;
 set_real_ip_from 89.147.111.124;
 set_real_ip_from 89.147.111.87;
+set_real_ip_from 89.185.85.140;
 set_real_ip_from 89.187.143.31;
 set_real_ip_from 89.213.174.248;
 set_real_ip_from 89.234.157.254;
@@ -1972,13 +1987,13 @@ set_real_ip_from 89.58.26.216;
 set_real_ip_from 89.58.41.156;
 set_real_ip_from 89.58.41.251;
 set_real_ip_from 89.58.63.200;
+set_real_ip_from 91.103.253.141;
 set_real_ip_from 91.132.144.59;
 set_real_ip_from 91.193.18.63;
 set_real_ip_from 91.202.5.104;
 set_real_ip_from 91.203.144.194;
 set_real_ip_from 91.203.145.116;
 set_real_ip_from 91.206.26.26;
-set_real_ip_from 91.208.206.47;
 set_real_ip_from 91.208.75.153;
 set_real_ip_from 91.208.75.156;
 set_real_ip_from 91.208.75.178;
@@ -2025,6 +2040,8 @@ set_real_ip_from 94.177.106.46;
 set_real_ip_from 94.177.106.54;
 set_real_ip_from 94.177.106.55;
 set_real_ip_from 94.177.106.59;
+set_real_ip_from 94.228.163.25;
+set_real_ip_from 94.228.169.70;
 set_real_ip_from 94.230.208.147;
 set_real_ip_from 94.230.208.148;
 set_real_ip_from 94.32.66.15;
