--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -145,7 +145,6 @@ allow 144.24.197.112;
 allow 146.59.35.246;
 allow 146.59.35.38;
 allow 146.70.164.210;
-allow 146.70.81.186;
 allow 147.45.116.145;
 allow 147.45.49.17;
 allow 147.45.78.34;
@@ -1074,6 +1073,7 @@ allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
 allow 23.155.8.104;
+allow 23.20.62.69;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:6180:100:d0::2c:3001;
@@ -1487,6 +1487,7 @@ allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
+allow 2a04:52c0:113:2b92::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
@@ -1788,7 +1789,6 @@ allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.194.86.175;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1902,6 +1902,7 @@ allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
+allow 5.255.108.103;
 allow 5.255.111.64;
 allow 5.255.114.171;
 allow 5.255.115.143;
@@ -1973,6 +1974,7 @@ allow 77.91.85.147;
 allow 78.142.18.219;
 allow 79.124.8.241;
 allow 79.137.198.213;
+allow 79.17.86.58;
 allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
